My Personal Portfolio

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -10,67 +10,52 @@
 <body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&#10037;</li>
             <li><a href="base_index.html">Base</a></li>
             <li><a href="index.html">Home</a></li>
-                <li><a href="tweets.html">My tweets</a></li>
+            <li><a href="tweets.html">My tweets</a></li>
         </ul>
     </header>
 
     <main>
         <article>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, autem!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt eligendi vitae maiores! Error magni vero reiciendis ducimus, recusandae maiores! Dolor?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi debitis reprehenderit maiores delectus voluptas, voluptatibus vero repellendus est dolores fugit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi provident quibusdam doloremque enim, accusantium earum quidem nobis voluptates ratione voluptas.</p>
-
-            <h1>My Portfolio Page</h1>
-            <h2>Who AM I</h2>
-            <h3>What I do</h3>
-
-            <a href="https://www.alxafrica.com/">
+            <section class="intro">
+                <h1>Hi, I'm Chioma Ikechukwu</h1>
+                <h2>Aspiring Software Engineer | Cybersecurity Enthusiast</h2>
+                <p>Welcome to my personal portfolio. I'm passionate about building secure and user-friendly digital experiences. Currently learning and growing through ALX and personal projects.</p>
+                <a href="https://www.alxafrica.com/" target="_blank">
                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo">
-            </a>
-            <p>Check out my <a href="tweets.html">tweets</a> for more updates.</p>
+                </a>
+            </section>
 
-            <div>
+            <section class="updates">
+                <h3>Latest Update</h3>
+                <p>Check out my <a href="tweets.html">tweets</a> for insights into my tech journey and ongoing projects!</p>
+            </section>
+
+            <section class="data-table">
+                <h3>Tech Buddies</h3>
                 <table>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Age</th>
-                            <th>Country</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>John</td>
-                            <td>25</td>
-                            <td>USA</td>
-                        </tr>
-                        <tr>
-                            <td>Emily</td>
-                            <td>28</td>
-                            <td>Canada</td>
-                        </tr>
-                        <tr>
-                            <td>Micheal</td>
-                            <td>32</td>
-                            <td>Australia</td>
-                        </tr>
-                        <tr>
-                            <td>Sophia</td>
-                            <td>21</td>
-                            <td>UK</td>
-                        </tr>
-                    </tbody>
+                <thead>
+                    <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>John</td><td>25</td><td>USA</td></tr>
+                    <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+                    <tr><td>Micheal</td><td>32</td><td>Australia</td></tr>
+                    <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+                </tbody>
                 </table>
-            </div>
+            </section>
         </article>
 
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
-
     </main>
 
     <footer>
